// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders fullOverlay 1`] = `
<div
  className="ps-card ps-card--medium"
  fullOverlay={
    <div>
      FakePlayBtn
    </div>
  }
>
  <div
    className="ps-card__image-frame"
  >
    <div
      className="ps-card__image"
    />
    <div
      className="ps-card__full-overlay"
    >
      <div>
        FakePlayBtn
      </div>
    </div>
  </div>
  <div
    className="ps-card__title"
  >
    <span
      style={
        Object {
          "display": "block",
          "maxHeight": "0px",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <span
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        
        …
      </span>
      <span
        style={
          Object {
            "display": "block",
            "height": "0px",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        The card title
      </span>
      <span
        style={
          Object {
            "display": "block",
            "left": "-20000px",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
        </span>
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          
          …
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`renders required props 1`] = `
<div
  className="ps-card ps-card--medium"
>
  <div
    className="ps-card__image-frame"
  >
    <div
      className="ps-card__image"
    />
  </div>
  <div
    className="ps-card__title"
  >
    <span
      style={
        Object {
          "display": "block",
          "maxHeight": "0px",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <span
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        
        …
      </span>
      <span
        style={
          Object {
            "display": "block",
            "height": "0px",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        The card title
      </span>
      <span
        style={
          Object {
            "display": "block",
            "left": "-20000px",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
        </span>
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          
          …
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`renders tag 1`] = `
<div
  className="ps-card ps-card--medium"
>
  <div
    className="ps-card__image-frame"
  >
    <div
      className="ps-card__image"
    />
    <div
      className="ps-card__tag"
    >
      <div
        className="ps-card__tag__part"
        css={
          Object {
            "ps-icon__fg--fill": "ps-icon__fg--fill",
            "ps-icon__fg--stroke": "ps-icon__fg--stroke",
          }
        }
      >
        FakeSVG
      </div>
      <span
        className="ps-card__tag__part"
        css={
          Object {
            "ps-icon__fg--fill": "ps-icon__fg--fill",
            "ps-icon__fg--stroke": "ps-icon__fg--stroke",
          }
        }
      >
        Course
      </span>
    </div>
  </div>
  <div
    className="ps-card__title"
  >
    <span
      style={
        Object {
          "display": "block",
          "maxHeight": "0px",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <span
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        
        …
      </span>
      <span
        style={
          Object {
            "display": "block",
            "height": "0px",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        The card title
      </span>
      <span
        style={
          Object {
            "display": "block",
            "left": "-20000px",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
        </span>
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          
          …
        </span>
      </span>
    </span>
  </div>
</div>
`;
